package thuchanh.singleton.a4.vote;

public enum Candidate {
  TRUMP, BIDEN
}
