@startuml
'https://plantuml.com/sequence-diagram
enum Candidate
class Election{
    - {static} Election instance
    - int trump,biden
    - List<String> users;
    - Election()
    - {static} Election getInstance()
    + void vote(Candidate candidate,String userName)
    + void result()
}
class User{
    - String name
    + void vote(Candidate candidate)
}
User..> Election
MainElection *--> User
note left of User::vote
    1. Tạo một instance của Election
    2. Gọi phương thức vote trên instance để bầu chọn
end note
note left of Election
Singleton
end note
@enduml